rename xxxNumber() methods to xxxCount()